# nbp-mcp-server

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
examples/: README.md  manual_client.py
src/: nbp.py
tests/: __init__.py  conftest.py  test_currency_rates.py  test_gold_prices.py  test_helpers.py
